--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCUMENT html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -68,9 +68,7 @@
             </div>
             <br>
             更多光荣事迹未完待续，欢迎持续关注哦谢谢喵...
-            `; 
-
-            
+            `;
         </script>
 
         <!-- 网页头 -->
@@ -336,10 +334,9 @@
             var gitalk = new Gitalk({
                 clientID: 'Ov23liyiRl0RHQkqQsSS',
                 clientSecret: '2a2bc31351fed094fb4cd04b25d0a1fab541f444',
-                repo: 'Honoring-Legendary-Schools',
-                owner: 'Zhuhai-NO-3-High-School',
+                repo: 'Zhuhai-NO-3-High-School',
+                owner: 'bailifu',
                 admin: ['bailifu'],
-                labels: ['Gitalk'],
                 id: '1', // Ensure uniqueness and length less than 50
                 distractionFreeMode: false // Facebook-like distraction free mode
             });
