--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         </tbody>
                     </table>
                 </div>
-                欢迎前往 <a href="https://github.com/Zhuhai-NO-3-High-School/Honoring-Legendary-Schools">开源仓库</a> 进行 Fork 使光荣事迹永驻<br>
+                欢迎前往 <a href="https://github.com/bailifu/Zhuhai-NO.3-High-School">开源仓库</a> 进行 Fork 使光荣事迹永驻<br>
                 <p id="tips">继续向下滚动查看更多</p>
             </div>
             <!-- 分割线后 主体 -->
@@ -337,7 +337,7 @@
                 repo: 'Zhuhai-NO-3-High-School',
                 owner: 'bailifu',
                 admin: ['bailifu'],
-                id: '1', // Ensure uniqueness and length less than 50
+                id: 'ZH3Z.SBS', // Ensure uniqueness and length less than 50
                 distractionFreeMode: false // Facebook-like distraction free mode
             });
             gitalk.render('gitalk-container');
