--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             var gitalk = new Gitalk({
                 clientID: 'Ov23liyiRl0RHQkqQsSS',
                 clientSecret: '2a2bc31351fed094fb4cd04b25d0a1fab541f444',
-                repo: 'Zhuhai-NO-3-High-School',
+                repo: 'Zhuhai-NO.3-High-School',
                 owner: 'bailifu',
                 admin: ['bailifu'],
                 id: md5(location.pathname), // Ensure uniqueness and length less than 50
