[UPDATE] Genshin Impact UID

--- a/index.html
+++ b/index.html
@@ -293,6 +293,13 @@
                         </tbody>
                     </table>
                 </div>
+                <div id="No-fear-of-power-and-no-fear-of-heights" style="text-align: center; margin-top: 20px; padding: 10px; border: 1px solid white; border-radius: 5px;">
+                    凭你一人，怎能堵住天下人悠悠众口。<br>
+                    君子可内敛不可怯懦，墙倒众人推。<br>
+                    无所畏惧，便是青春。<br>
+                    不畏强权不畏高，百代英雄轮传转。
+                </div>
+                <br>
                 欢迎前往 <a href="https://github.com/bailifu/Zhuhai-NO.3-High-School">开源仓库</a> 进行 Fork 使光荣事迹永驻<br>
                 <p id="tips">继续向下滚动查看更多</p>
             </div>
@@ -302,6 +309,15 @@
                 <img alt="Picture_frames_for_mourning_halls" src="./posthumous_frame_for_a_portrait_or_obituary.png" id="Picture_Border">
                 <div style="position: absolute;"><div id="Champagne"></div></div>
                 <h3 id="big_name">未启用 JavaScript。</h3>
+                <div id="A-gentleman-can-be-introverted-but-not-cowardly" style="text-align: center; margin-top: 20px; padding: 10px; border: 1px solid white; border-radius: 5px;">
+                    黑龙江省大兴安岭地区 男 45岁<br>
+                    （疑似）配偶: 王振艳（珠海市第九中学校长）<br>
+                    QQ: 5503973<br>
+                    互动热线: 13825657779<br>
+                    原神 UID: 232700197906280016<br>
+                    地址: 珠海市香洲区梅华西路珠海一中高中部（源：移动全球通）<br>
+                    地址: 广东省珠海市香洲区前山街道梅华西路2180号珠海市一中西门（源：快递）
+                </div>
                 <hr />
                 <h4 id="Gongpin">给 [] 送上贡品</h4>
                 <div class="btn-group" role="group" aria-label="...">
